# openbook-v2

./: .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .gitpod.yml  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  idl-fixup.sh  justfile  package-lock.json  package.json  token2022.md  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
.github/workflows/: ci-code-review-rust.yml  ci-code-review-ts.yml  ci-verified-build.yml  release-verifiable-build.yml  rust-lints.yml  rust-tests.yml
documentation/: overview.md
idl/: openbook_v2.json
lib/checked_math/: Cargo.toml  LICENSE  README.md
lib/checked_math/src/: lib.rs
lib/checked_math/src/transform/: checked.rs  mod.rs
lib/checked_math/tests/: 01-success.rs  progress.rs
lib/client/: Cargo.toml
lib/client/src/: account_fetcher.rs  account_update_stream.rs  book.rs  chain_data.rs  chain_data_fetcher.rs  client.rs  context.rs  gpa.rs  jup.rs  jupiter.rs  lib.rs  snapshot_source.rs  util.rs  websocket_source.rs
migrations/: deploy.ts
programs/openbook-v2/: Cargo.toml
programs/openbook-v2/fuzz/: Cargo.toml
programs/openbook-v2/fuzz/fuzz_targets/: multiple_orders.rs
programs/openbook-v2/fuzz/src/: account_allocator.rs  accounts_state.rs  lib.rs  processor.rs
programs/openbook-v2/src/: accounts_zerocopy.rs  error.rs  events.rs  i80f48.rs  lib.rs  logs.rs  pod_option.rs  pubkey_option.rs  token_utils.rs  types.rs  util.rs
programs/openbook-v2/src/accounts_ix/: cancel_all_and_place_orders.rs  cancel_all_orders.rs  cancel_all_orders_by_side.rs  cancel_and_place_orders.rs  cancel_order.rs  cancel_order_by_client_order_id.rs  close_market.rs  close_open_orders_account.rs  close_open_orders_indexer.rs  consume_events.rs  create_market.rs  create_open_orders_account.rs  create_open_orders_indexer.rs  deposit.rs  init_open_orders.rs  mod.rs  place_and_cancel_multiple_orders.rs  place_multiple_orders.rs  place_order.rs  place_take_order.rs  prune_orders.rs  set_delegate.rs  set_market_expired.rs  settle_fees.rs  settle_funds.rs  settle_funds_expired.rs  stub_oracle_close.rs  stub_oracle_create.rs  stub_oracle_set.rs  sweep_fees.rs
programs/openbook-v2/src/instructions/: .consume_events.rs.swp  aaa.rs  cancel_all_and_place_orders.rs  cancel_all_orders.rs  cancel_all_orders_by_side.rs  cancel_and_place_orders.rs  cancel_order.rs  cancel_order_by_client_order_id.rs  cancel_orders_by_client_order_id.rs  close_market.rs  close_open_orders_account.rs  close_open_orders_indexer.rs  consume_events.rs  create_market.rs  create_open_orders_account.rs  create_open_orders_indexer.rs  deposit.rs  edit_order.rs  init_open_orders.rs  mod.rs  place_and_cancel_multiple_orders.rs  place_multiple_orders.rs  place_order.rs  place_take_order.rs  prune_orders.rs  set_delegate.rs  set_market_expired.rs  settle_fees.rs  settle_funds.rs  settle_funds_expired.rs  stub_oracle_close.rs  stub_oracle_create.rs  stub_oracle_set.rs  sweep_fees.rs
programs/openbook-v2/src/state/: .open_orders_account.rs.swp  dynamic_account.rs  market.rs  mod.rs  open_orders_account.rs  open_orders_components.rs  open_orders_indexer.rs  oracle.rs  raydium_internal.rs  stable_price.rs
programs/openbook-v2/src/state/orderbook/: .book.rs.swp  book.rs  bookside.rs  bookside_iterator.rs  heap.rs  mod.rs  nodes.rs  order.rs  order_type.rs  ordertree.rs  ordertree_iterator.rs  queue.rs
programs/openbook-v2/tests/: test_all.rs
programs/openbook-v2/tests/cases/: mod.rs  test.rs  test_crank.rs  test_create_market.rs  test_edit_order.rs  test_fees.rs  test_fill_or_kill_order.rs  test_indexer.rs  test_ioc.rs  test_multiple_orders.rs  test_oracle_peg.rs  test_order_types.rs  test_permissioned.rs  test_place_order_remaining.rs  test_self_trade.rs  test_take_order.rs
programs/openbook-v2/tests/cases_v2/: test.rs  test_crank.rs  test_edit_order.rs  test_fees.rs  test_indexer.rs  test_ioc.rs  test_oracle_peg.rs  test_order_types.rs  test_permissioned.rs  test_place_order_remaining.rs  test_self_trade.rs  test_take_order.rs
programs/openbook-v2/tests/program_test/: client.rs  cookies.rs  mod.rs  setup.rs  solana.rs  utils.rs
scripts/: createMarket.ts
tests/: openbook-v2.ts
ts/client/src/: accounts.ts  client.ts  index.ts  market.ts  openbook_v2.ts  queue.ts  utils.ts
ts/client/src/accounts/: bookSide.ts  eventHeap.ts  market.ts  openOrders.ts  openOrdersAccount.ts  openOrdersIndexer.ts
ts/client/src/structs/: order.ts
ts/client/src/test/: market.ts  openOrders.ts  util.ts
ts/client/src/utils/: rpc.ts  utils.ts  watcher.ts
ts/inspector/: eventParser.ts
