[workspace]
members = [
  "lib/client",
  "programs/*",
]

[workspace.dependencies]
# note: anchor was patched - see 'patch' section
anchor-client = { version = "0.28.0" }
anchor-lang = { version = "0.28.0" }
anchor-spl = { version = "0.28.0" }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
solana-account-decoder = "~1.16.1"
solana-client = "~1.16.1"
solana-logger = "~1.16.1"
solana-program = "~1.16.1"
solana-program-test = "~1.16.1"
solana-rpc = "~1.16.1"
solana-sdk = "~1.16.1"
spl-associated-token-account = "1.0.3"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

[patch.crates-io]
anchor-client = { git = "https://github.com/openbook-dex/anchor.git", branch = "v0.28.0_abfdc4e-arbitrary" }
anchor-lang = { git = "https://github.com/openbook-dex/anchor.git", branch = "v0.28.0_abfdc4e-arbitrary" }
anchor-spl = { git = "https://github.com/openbook-dex/anchor.git", branch = "v0.28.0_abfdc4e-arbitrary" }

