[workspace]
members = [
  "lib/client",
  "programs/*",
]

[workspace.dependencies]
anchor-client = { version = "0.28.0", git = "https://github.com/coral-xyz/anchor.git", rev = "2af9cc669" }
anchor-lang = { version = "0.28.0", git = "https://github.com/coral-xyz/anchor.git", rev = "2af9cc669" }
anchor-spl = { version = "0.28.0", git = "https://github.com/coral-xyz/anchor.git", rev = "2af9cc669" }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
solana-account-decoder = "~1.16.1"
solana-client = "~1.16.1"
solana-logger = "~1.16.1"
solana-program = "~1.16.1"
solana-program-test = "~1.16.1"
solana-rpc = "~1.16.1"
solana-sdk = "~1.16.1"
spl-associated-token-account = "1.0.3"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

