[package]
name = "openbook-v2-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
anchor-lang = { git = "https://github.com/openbook-dex/anchor.git", branch = "v0.28.0_abfdc4e-arbitrary", version = "0.28.0" }
anchor-spl = { git = "https://github.com/openbook-dex/anchor.git", branch = "v0.28.0_abfdc4e-arbitrary", version = "0.28.0" }
arbitrary = { version = "~1.0", features = ["derive"] }
bumpalo = "3.13.0"
libfuzzer-sys = "0.4"
solana-program = "~1.16.1"
solana-runtime = "~1.16.1"
solana-sdk = "~1.16.1"
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
env_logger = "0.10.0"
log = "0.4.19"
base64 = "0.21.2"
itertools = "0.11.0"
num_enum = "0.6.1"

[dependencies.openbook-v2]
path = ".."
features = ["enable-gpl", "arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "multiple_orders"
path = "fuzz_targets/multiple_orders.rs"
test = false
doc = false
